Fix overlap on top nest

--- a/app/assets/stylesheets/partials/_page.css.sass
+++ b/app/assets/stylesheets/partials/_page.css.sass
@@ -105,7 +105,7 @@ body
       position: absolute
       height: #{$page-width}
       right: 0
-      top: 0
+      top: 55px
 
   &:after,
   &:before
